# gutp-building-os-ri

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.demo-e2e.yaml  docker-compose.demo.yaml  docker-compose.dev.yaml  docker-compose.harbor.yaml  docker-compose.minimal.yaml  docker-compose.observability.yml  docker-compose.oss.yaml  docker-compose.yaml
Tools/workload-test-project/: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
Tools/workload-test-project/configs/: azure_metrics_config.json  data_size_load.yaml  device_scaling.yaml  message_frequency.yaml
Tools/workload-test-project/configs/scenarios/: data_size_load.json  device_scaling.json  message_frequency.json
Tools/workload-test-project/data/templates/: b-ridge_message.json  bacnet_message.json  behavior_message.json  electric_message.json  environmental_message.json  hvac_message.json
Tools/workload-test-project/docs/: ARCHITECTURE.md  AZURE_METRICS_GUIDE.md  AZURE_SDK_VERSION_CHANGES.md  METRICS.md  QUICKSTART_AZURE_METRICS.md  SHARED_CONNECTION_DESIGN.md  USAGE.md  concurrent_sends_configuration.md
Tools/workload-test-project/scripts/: run_test.py
Tools/workload-test-project/src/core/: azure_metrics_collector.py  config.py  device_factory.py  message_generator.py  metrics_collector.py  shared_connection_device.py  test_orchestrator.py
Tools/workload-test-project/src/scenarios/: data_size_load_scenario.py  (+2 more)
e2e/: plan.md  (+3 more)
(+1646 files in other folders)
