[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "building-os-loadtest"
version = "1.0.0"
description = "Building OS Load Testing System"
authors = [
    {name = "Building OS Team", email = "team@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "azure-iot-device>=2.12.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-identity>=1.15.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "prometheus-client>=0.19.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "requests>=2.31.0",
]

[project.scripts]
loadtest = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"